--- a/Projects/CSS/Aafiya.css
+++ b/Projects/CSS/Aafiya.css
@@ -1,538 +1,544 @@
+@import url("https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap");
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Poppins;
 }
 
 nav {
-    width: 100%;
+  width: 100%;
 }
 
 .child1 {
-    display: flex;
-    padding-top: 15px;
-    gap: 20px;
-    /* height: 50vh; */
-    /* border: 1px solid black; */
-    justify-content: space-evenly;
-    align-items: center;
+  display: flex;
+  padding-top: 15px;
+  gap: 20px;
+  /* border: 1px solid black; */
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .img3,
 .img4,
 .img5 {
-    height: 60px;
-    width: 60px;
-    padding-top: 10px;
-    object-fit: contain;
+  height: 60px;
+  width: 60px;
+  padding-top: 10px;
+  object-fit: contain;
 }
 
 .book_text,
 .call_text,
 .mail_text {
-    display: flex;
-    width: 250px;
-    /* border: 1px solid red; */
-    justify-content: center;
-    padding-bottom: 15px;
+  display: flex;
+  width: 250px;
+  /* border: 1px solid red; */
+  justify-content: center;
+  padding-bottom: 15px;
 }
 
 .grid {
-    display: grid;
-    text-align: left;
-    padding-left: 10px;
+  display: grid;
+  text-align: left;
+  padding-left: 10px;
 }
 
 .img1 {
-    height: 70px;
-    width: 300px;
-    object-fit: contain;
+  height: 70px;
+  width: 300px;
+  object-fit: contain;
 }
 
 .img2 {
-    height: 80px;
-    width: 70px;
-    object-fit: contain;
+  height: 80px;
+  width: 70px;
+  object-fit: contain;
 }
 
 .image_text {
-    display: flex;
-    gap: 20px;
-    padding-right: 50px;
+  display: flex;
+  gap: 20px;
+  padding-right: 50px;
 }
 
 .images {
-    display: flex;
-    gap: 25px;
-    padding-left: 50px;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  gap: 25px;
+  padding-left: 50px;
+  justify-content: center;
+  align-items: center;
 }
 
 .text1 {
-    font-weight: bolder;
-    font-size: 15px;
+  font-weight: bolder;
+  font-size: 15px;
 }
 
 .text {
-    font-weight: bold;
-    color: gray;
-    font-size: 15px;
+  font-weight: bold;
+  color: gray;
+  font-size: 15px;
 }
 
 .India {
-    display: flex;
-    padding-left: 5px;
-    justify-content: center;
-    gap: 8px;
+  display: flex;
+  padding-left: 5px;
+  justify-content: center;
+  gap: 8px;
 }
 
-.India>.img6 {
-    height: 50px;
-    /* width: 50px; */
-    padding-top: 10px;
-    object-fit: contain;
+.India > .img6 {
+  height: 50px;
+  /* width: 50px; */
+  padding-top: 10px;
+  object-fit: contain;
 }
 
-.India>.img7 {
-    height: 40px;
-    /* width: 40px; */
-    padding-top: 23px;
-    object-fit: contain;
+.India > .img7 {
+  height: 40px;
+  /* width: 40px; */
+  padding-top: 23px;
+  object-fit: contain;
 }
 
 .child2 {
-    display: flex;
-    padding-top: 10px;
-    /* border: 1px solid black; */
-    justify-content: space-evenly;
-    align-items: center;
-    color: white;
-    padding-bottom: 10px;
-    background-color: rgb(125, 163, 244);
+  display: flex;
+  padding-top: 10px;
+  /* border: 1px solid black; */
+  justify-content: space-evenly;
+  align-items: center;
+  color: white;
+  padding-bottom: 10px;
+  height: 55px;
+  background-color: rgb(125, 163, 244);
 }
 
-.child2>ul {
-    list-style-type: none;
-    display: flex;
-    gap: 60px;
-    justify-content: center;
-    font-weight: bold;
-    align-items: center;
-    font-size: larger;
-    padding-right: 60px;
+.child2 > ul {
+  list-style-type: none;
+  display: flex;
+  gap: 40px;
+  justify-content: center;
+  align-items: center;
+  font-size: large;
+  padding-right: 60px;
 }
 
-.child2>input {
-    height: 45px;
-    background-color: rgb(125, 163, 244);
-    width: 200px;
-    padding-left: 10px;
-    font-weight: bold;
-    border: 2px solid black;
+.child2 > input {
+  height: 55px;
+  background-color: blue;
+  width: 170px;
+  padding-right: 10px;
+  border: 2px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-.child2>input::placeholder {
-    color: white;
-    text-align: center;
-    font-size: large;
-    font-weight: bolder;
-    opacity: 0.8;
+.child2 > input::placeholder {
+  color: white;
+  padding-left: 7.5px;
+  font-size: large;
+  opacity: 0.8;
 }
 
 .home_img {
-    background-image: url(../Images/Main\ Image.jpg);
-    background-position: center center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    padding: 80px 0;
-    padding-left: 70px;
-    position: relative;
-    color: white;
+  background-image: url(../Images/Main\ Image.jpg);
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding: 80px 0;
+  padding-left: 70px;
+  position: relative;
+  color: white;
 }
 
-.home_img>.home_child {
-    display: flex;
-    gap: 20px;
+.home_img > .home_child {
+  display: flex;
+  gap: 20px;
 }
 
-.home_img>.home_child>.home_content,
-span {
-    font-size: 20px;
-    font-weight: bold;
+.home_img > .home_child > .home_content {
+  font-size: 20px;
+}
+.home_img > .home_child > span {
+  font-size: 20px;
+  font-weight: bold;
 }
 
-.home_img>h3 {
-    font-size: 37px;
-    font-weight: bolder;
-    margin-bottom: 15px;
+.home_img > h3 {
+  font-size: 37px;
+  font-weight: normal;
+  margin-bottom: 15px;
 }
 
-.home_img>.home_description {
-    font-size: 19px;
-    margin-bottom: 25px;
-    font-weight: bold;
+.home_img > .home_description {
+  font-size: 19px;
+  margin-bottom: 25px;
 }
 
-.home_img>.home_child>span {
-    color: red;
+.home_img > .home_child > span {
+  color: red;
 }
 
-.home_img>.enquire_now {
-    background-color: #1da1f2;
-    font-weight: bold;
-    color: white;
-    font-size: 17px;
-    width: 170px;
-    height: 40px;
+.home_img > .enquire_now {
+  background-color: #1da1f2;
+  color: white;
+  font-size: 17px;
+  width: 170px;
+  height: 40px;
+  border: transparent;
 }
 
-.nav2>ul {
-    list-style-type: none;
-    display: flex;
-    gap: 50px;
-    padding-left: 60px;
-    padding-top: 25px;
-    padding-bottom: 20px;
-    border-bottom: 2px solid gray;
-    font-size: larger;
-    font-weight: 300;
+.nav2 > ul {
+  list-style-type: none;
+  display: flex;
+  gap: 50px;
+  padding-left: 60px;
+  padding-top: 25px;
+  padding-bottom: 20px;
+  border-bottom: 2px solid gray;
+  font-size: larger;
+  font-weight: 300;
 }
 
-.nav2>ul>.list:hover {
-    text-decoration: underline;
+.nav2 > ul > .list:hover {
+  text-decoration: underline;
 }
 
 .treatment_overview {
-    display: flex;
-    width: 100%;
-    gap: 50px;
-    margin-bottom: 10px;
-    border-bottom: 2px dashed blue;
-    margin-left: 70px;
+  display: flex;
+  width: 1250px;
+  height: 455px;
+  gap: 140px;
+  margin-bottom: 30px;
+  border-bottom: 2px dashed blue;
+  margin-left: 50px;
 }
 
-.treatment_overview>.treatment_text {
-    padding-top: 67px;
-    padding-bottom: 50px;
+.treatment_overview > .treatment_text {
+  padding-top: 59px;
+  padding-left: 50px;
 }
 
-.treatment_overview>.treatment_text>p {
-    font-size: 25px;
-    padding-bottom: 25px;
+.treatment_overview > .treatment_text > p {
+  font-size: 17px;
+  padding-bottom: 25px;
 }
 
-.treatment_overview>.treatment_text>h3 {
-    font-weight: bold;
-    font-size: 30px;
+.treatment_overview > .treatment_text > h3 {
+  font-weight: 500;
+  font-size: 30px;
 }
 
-.treatment_overview>.treatment_img>img {
-    height: 480px;
-    width: 700px;
-    padding-top: 40px;
-    padding-bottom: 40px;
-    object-fit: contain;
-    margin-right: 70px;
+.treatment_overview > .treatment_img > img {
+  height: 410px;
+  width: 530px;
+  padding-top: 40px;
+  object-fit: contain;
 }
 
 .eligibility_for_treatment {
-    display: flex;
-    width: 100%;
-    gap: 80px;
-    padding-top: 50px;
-    margin-left: 70px;
+  display: flex;
+  width: 1280px;
+  gap: 30px;
+  padding-top: 50px;
+  margin-left: 70px;
 }
 
-.eligibility_for_treatment>.eligibility_text {
-    border-bottom: 2px dashed blue;
+.eligibility_for_treatment > .eligibility_text {
+  border-bottom: 2px dashed blue;
 }
 
-.eligibility_for_treatment>.eligibility_text>h3 {
-    font-size: 30px;
-    font-weight: bold;
+.eligibility_for_treatment > .eligibility_text > h3 {
+  font-size: 30px;
+  font-weight: 500;
 }
 
-.eligibility_for_treatment>.eligibility_text>ul {
-    list-style-type: circle;
-    padding-left: 23px;
+.eligibility_for_treatment > .eligibility_text > ul {
+  list-style-type: circle;
+  padding-left: 23px;
 }
 
-.eligibility_for_treatment>.eligibility_text>ul>li::marker {
-    color: blue;
-    font-size: 30px;
-    font-weight: bold;
+.eligibility_for_treatment > .eligibility_text > ul > li::marker {
+  color: blue;
+  font-size: 30px;
+  font-weight: bold;
 }
 
-.eligibility_for_treatment>.eligibility_form>h3 {
-    font-size: 35px;
-    color: blue;
-    font-weight: bold;
-    font-style: italic;
+.eligibility_for_treatment > .eligibility_form > h3 {
+  font-size: 35px;
+  color: blue;
+  font-weight: 500;
+  font-style: italic;
 }
 
 .eligibility_form {
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
-    border-radius: 7px;
-    padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+  border-radius: 7px;
+  padding: 20px;
 }
 
-.eligibility_for_treatment>.eligibility_form>p {
-    font-size: 20px;
+.eligibility_for_treatment > .eligibility_form > p {
+  font-size: 20px;
 }
 
-.eligibility_for_treatment>.eligibility_form>form>input {
-    height: 40px;
-    width: 300px;
-    gap: 20px;
-    border: 2px solid black;
-    border-radius: 7px;
+.eligibility_for_treatment > .eligibility_form > form > input {
+  height: 40px;
+  width: 300px;
+  gap: 20px;
+  border: 2px solid black;
+  border-radius: 7px;
 }
 
-.eligibility_for_treatment>.eligibility_form>form>input::placeholder {
-    color: gray;
-    padding-left: 15px;
+.eligibility_for_treatment > .eligibility_form > form > input::placeholder {
+  color: gray;
+  padding-left: 15px;
 }
 
-.eligibility_for_treatment>.eligibility_form>form>.textarea {
-    height: 100px;
-    width: 300px;
-    border: 2px solid black;
-    border-radius: 7px;
+.eligibility_for_treatment > .eligibility_form > form > .textarea {
+  height: 100px;
+  width: 300px;
+  border: 2px solid black;
+  border-radius: 7px;
 }
-
 
 /*.eligibility_for_treatment>.eligibility_form>form>.textarea::placeholder {
     padding-bottom: 70px;
 }*/
 
-.eligibility_for_treatment>.eligibility_form>form>button {
-    background: linear-gradient(to right, #00aaff, #66ccff);
-    color: white;
-    width: 100%;
-    border-radius: 7px;
-    border: none;
-    height: 45px;
+.eligibility_for_treatment > .eligibility_form > form > button {
+  background: linear-gradient(to right, #00aaff, #66ccff);
+  color: white;
+  width: 100%;
+  border-radius: 7px;
+  border: none;
+  height: 45px;
 }
 
-.preparation_of_treatment>h3 {
-    font-size: 30px;
-    font-weight: bold;
+.preparation_of_treatment > h3 {
+  font-size: 30px;
+  font-weight: 500;
 }
 
 .preparation_of_treatment {
-    border-bottom: 2px dashed blue;
-    margin-bottom: 10px;
-    padding-bottom: 30px;
-    gap: 50px;
-    padding-top: 50px;
-    margin-left: 70px;
-    width: 50%;
+  border-bottom: 2px dashed blue;
+  margin-bottom: 10px;
+  padding-bottom: 30px;
+  gap: 50px;
+  padding-top: 50px;
+  margin-left: 70px;
+  width: 50%;
 }
 
-.preparation_of_treatment>ul {
-    list-style-type: circle;
-    padding-left: 23px;
+.preparation_of_treatment > ul {
+  list-style-type: circle;
+  padding-left: 23px;
 }
 
-.preparation_of_treatment>ul>li::marker {
-    color: blue;
-    font-size: 30px;
-    font-weight: bold;
+.preparation_of_treatment > ul > li::marker {
+  color: blue;
+  font-size: 30px;
+  font-weight: bold;
 }
 
 .about_treatment {
-    border-bottom: 2px dashed blue;
-    margin-bottom: 10px;
-    padding-bottom: 30px;
-    gap: 50px;
-    padding-top: 50px;
-    margin-left: 70px;
-    width: 50%;
+  border-bottom: 2px dashed blue;
+  margin-bottom: 10px;
+  padding-bottom: 30px;
+  gap: 50px;
+  padding-top: 50px;
+  margin-left: 70px;
+  width: 50%;
 }
 
-.about_treatment>ul {
-    list-style-type: circle;
-    padding-left: 23px;
+.about_treatment > ul {
+  list-style-type: circle;
+  padding-left: 23px;
 }
 
-.about_treatment>ul>li::marker {
-    color: blue;
-    font-size: 30px;
-    font-weight: bold;
+.about_treatment > ul > li::marker {
+  color: blue;
+  font-size: 30px;
+  font-weight: bold;
 }
 
-.about_treatment>h3 {
-    font-size: 30px;
-    font-weight: bold;
+.about_treatment > h3 {
+  font-size: 30px;
+  font-weight: 500;
 }
 
 .post_treatment {
-    border-bottom: 2px dashed blue;
-    margin-bottom: 10px;
-    padding-bottom: 30px;
-    gap: 50px;
-    padding-top: 50px;
-    margin-left: 70px;
-    width: 50%;
+  border-bottom: 2px dashed blue;
+  margin-bottom: 10px;
+  padding-bottom: 30px;
+  gap: 50px;
+  padding-top: 50px;
+  margin-left: 70px;
+  width: 50%;
 }
 
-.post_treatment>ul {
-    list-style-type: circle;
-    padding-left: 23px;
+.post_treatment > ul {
+  list-style-type: circle;
+  padding-left: 23px;
 }
 
-.post_treatment>ul>li::marker {
-    color: blue;
-    font-size: 30px;
-    font-weight: bold;
+.post_treatment > ul > li::marker {
+  color: blue;
+  font-size: 30px;
+  font-weight: bold;
 }
 
-.post_treatment>h3 {
-    font-size: 30px;
-    font-weight: bold;
+.post_treatment > h3 {
+  font-size: 30px;
+  font-weight: 500;
 }
 
 .treatment_recovery {
-    border-bottom: 2px dashed blue;
-    margin-bottom: 10px;
-    padding-bottom: 30px;
-    gap: 50px;
-    padding-top: 50px;
-    margin-left: 70px;
-    width: 50%;
+  border-bottom: 2px dashed blue;
+  margin-bottom: 10px;
+  padding-bottom: 30px;
+  gap: 50px;
+  padding-top: 50px;
+  margin-left: 70px;
+  width: 50%;
 }
 
-.treatment_recovery>ul {
-    list-style-type: circle;
-    padding-left: 23px;
+.treatment_recovery > ul {
+  list-style-type: circle;
+  padding-left: 23px;
 }
 
-.treatment_recovery>ul>li::marker {
-    color: blue;
-    font-size: 30px;
-    font-weight: bold;
+.treatment_recovery > ul > li::marker {
+  color: blue;
+  font-size: 30px;
+  font-weight: bold;
 }
 
-.treatment_recovery>h3 {
-    font-size: 30px;
-    font-weight: bold;
+.treatment_recovery > h3 {
+  font-size: 30px;
+  font-weight: 500;
 }
 
-.treatment_faqs>h3 {
-    font-size: 30px;
-    font-weight: bold;
+.treatment_faqs > h3 {
+  font-size: 30px;
+  font-weight: 500;
 }
 
 .treatment_faqs {
-    border-bottom: 2px dashed blue;
-    padding-bottom: 45px;
-    margin-bottom: 11px;
-    gap: 50px;
-    padding-top: 50px;
-    margin-left: 70px;
-    width: 50%;
+  border-bottom: 2px dashed blue;
+  padding-bottom: 45px;
+  margin-bottom: 11px;
+  gap: 50px;
+  padding-top: 50px;
+  margin-left: 70px;
+  width: 50%;
 }
 
-.treatment_faqs>p {
-    border-top: 1px solid gray;
-    padding-top: 15px;
-    counter-reset: value;
+.treatment_faqs > p {
+  border-top: 1px solid gray;
+  padding-top: 15px;
+  counter-reset: value;
 }
 
-.treatment_faqs>p::before {
-    counter-increment: value;
-    content: "+  ";
-    font-weight: bold;
-    color: blue;
+.treatment_faqs > p::before {
+  counter-increment: value;
+  content: "+  ";
+  font-weight: bold;
+  color: blue;
 }
 
-.treatment_faqs>.answered {
-    counter-reset: value;
+.treatment_faqs > .answered {
+  counter-reset: value;
 }
 
-.treatment_faqs>.answered::before {
-    counter-increment: value;
-    content: "-  ";
-    color: blue;
+.treatment_faqs > .answered::before {
+  counter-increment: value;
+  content: "-  ";
+  color: blue;
 }
 
-.treatment_faqs>.bottom {
-    border-bottom: 1px solid gray;
-    display: block;
-    padding-bottom: 15px;
-    counter-reset: value;
+.treatment_faqs > .bottom {
+  border-bottom: 1px solid gray;
+  display: block;
+  padding-bottom: 15px;
+  counter-reset: value;
 }
 
-.treatment_faqs>.bottom::before {
-    counter-increment: value;
-    content: "+  ";
-    font-weight: bold;
-    color: blue;
+.treatment_faqs > .bottom::before {
+  counter-increment: value;
+  content: "+  ";
+  font-weight: bold;
+  color: blue;
 }
 
-.treatment_faqs>.answer {
-    border-top: 1px solid blue;
-    border-bottom: 1px solid blue;
-    padding-left: 50px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    counter-reset: value;
+.treatment_faqs > .answer {
+  border-top: 1px solid blue;
+  border-bottom: 1px solid blue;
+  padding-left: 50px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  counter-reset: value;
 }
 
-.treatment_faqs>.answer::before {
-    counter-increment: value;
-    content: "";
-    color: blue;
+.treatment_faqs > .answer::before {
+  counter-increment: value;
+  content: "";
+  color: blue;
 }
 
-.treatment_faqs>.answer>.left {
-    border-left: 1px solid blue;
-    display: block;
-    font-size: small;
-    padding-left: 5px;
-    color: gray;
+.treatment_faqs > .answer > .left {
+  border-left: 1px solid blue;
+  display: block;
+  font-size: small;
+  padding-left: 5px;
+  color: gray;
 }
 
 .patient_stories {
-    border-bottom: 2px dashed blue;
-    margin-bottom: 10px;
-    padding-bottom: 30px;
-    gap: 50px;
-    padding-top: 50px;
-    margin-left: 70px;
-    width: 50%;
+  border-bottom: 2px dashed blue;
+  margin-bottom: 10px;
+  padding-bottom: 30px;
+  gap: 50px;
+  padding-top: 50px;
+  margin-left: 70px;
+  width: 50%;
 }
 
-.patient_stories>h3 {
-    font-size: 30px;
-    font-weight: bold;
+.patient_stories > h3 {
+  font-size: 30px;
+  font-weight: 500;
 }
 
-.patient_stories>.stories_img {
-    border: 1px solid gray;
-    width: 400px;
-    padding-left: 30px;
-    padding-top: 20px;
-    padding-right: 20px;
+.patient_stories > .stories_img {
+  border: 1px solid gray;
+  width: 400px;
+  padding-left: 20px;
+  padding-top: 20px;
+  padding-right: 20px;
 }
 
-.patient_stories>.stories_img>.text1 {
-    display: flex;
-    font-size: medium;
-    font-weight: bold;
-    gap: 50px;
+.patient_stories > .stories_img > .text1 {
+  display: flex;
+  font-size: 13px;
+  font-weight: 500;
 }
 
-.patient_stories>.stories_img>.text1>.stories_text>.quotes {
-    height: 60px;
-    width: 60px;
-    margin-left: 240px;
-    object-fit: contain;
+.patient_stories > .stories_img > .text1 > .quotes {
+  height: 40px;
+  padding-left: 150px;
 }
 
-.patient_stories>.patients {
-    height: 100px;
-    width: 100px;
-    object-fit: contain;
+.patient_stories > .stories_img > img {
+  width: 360px;
+  object-fit: contain;
+}
+
+.profile1 {
+  display: flex;
+  gap: 10px;
+  padding: 10px 0;
+}
+
+.profile1 > img {
+  width: 50px;
+  height: 50px;
 }
